[package]
name = "tonic-hello"
version = "0.1.0"
authors = ["Owen Nelson <onelson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.1.*"
tokio = { version = "0.2.*", features = ["macros"] }
prost = "0.6"
futures = { version = "0.3", default-features = false, features = ["alloc"] }

[build-dependencies]
tonic-build = "0.1.*"